Change logo from jpg to svg, fix header spacings at different breakpoints

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,8 @@ hr {
 }
 
 .logo {
-    max-inline-size: 10%;
+    inline-size: min(10%, 10vw);
+    max-block-size: min(5%, 5vh);
     margin-inline-end: 2.5em;
     font-size: 2rem;
     color: var(--accent);
@@ -85,7 +86,7 @@ hr {
 
 .nav-link {
     text-decoration: none;
-    font-size: clamp(.25rem, 1.5vw + .5rem, 1.5rem);
+    font-size: clamp(.25rem, 1vw + .5rem, 1.5rem);
     color: var(--background);
 }
 
@@ -214,11 +215,7 @@ hr {
     align-items: center;
 }
 
-@media (max-width: 400px) {
-
-}
-
-@media (min-width: 800px) {
+@media (min-width: 500px) {
     .nav-list {
         justify-content: flex-end;
     }
@@ -229,5 +226,27 @@ hr {
 
     .call-to-action {
         margin-inline: 25%;
+        padding-inline: 2em;
+    }
+}
+
+@media (min-width: 750px) {
+    .nav-list {
+        display: flex;
+        justify-content: right;
+        align-self: center;
+        margin-block-start: 1.5em;
+    }
+}
+
+@media (min-width: 1000px) {
+    .nav-list {
+        margin-block-start: 2em;
+    }
+}
+
+@media (min-width: 1200px) {
+    .nav-list {
+        margin-block-start: 2.75em;
     }
 }
